--- a/pages/addcard/addcard.css
+++ b/pages/addcard/addcard.css
@@ -95,19 +95,21 @@ body{
     }
 /*轮播*/
     .device {
-        width: 7.5rem;height: 3.6rem;
+        width: 6.6rem;
         position: relative;
         margin: 0.1rem auto;
+        height: 2.5rem;
+        padding: 0.3rem 0.4rem;
     }
     .swiper-container {
-        width: 100%;
-        height: 3rem;
+        width: 6.6rem;
+        height: 2.5rem;
         color: #fff;
         text-align: center;
     }
-    .swiper-slide{
-        width: 4.8rem;
-        height: 3rem;
+    .swiper-slide {
+        position: relative;
+        height: 100%;
         opacity: 0.4;
         -webkit-transition: 300ms;
         -moz-transition: 300ms;
@@ -137,20 +139,11 @@ body{
         -o-transform: scale(1);
         transform: scale(1);
     }
-    .red-slide {
-        background: #ca4040;
-    }
-    .blue-slide {
-        background: #4390ee;
-    }
-    .orange-slide {
-        background: #ff8604;
-    }
-    .green-slide {
-        background: #49a430;
-    }
-    .pink-slide {
-        background: #973e76;
+    .swiper-slide img {
+        width: 100%;
+        position: absolute;
+        left: 0;top: 0;bottom: 0;right: 0;
+        margin: auto;
     }
     .pagination {
         position: absolute;
@@ -180,10 +173,10 @@ body{
     .swiper-visible-switch {
         opacity: 1;
         top: 0;
-        background: #B5B5B5;
+        background: #B2B5AA;
     }
     .swiper-active-switch {
-        background: #01A8EF;
+        background: #16A5E0;
     }
 /*银行卡信息*/
     .sy_information{
@@ -280,8 +273,8 @@ body{
         display: block;
     }
     .sy_useicon{
-        width: 0.54rem;height: 0.74rem;
-        background: red;
+        width: 0.6rem;height: 0.74rem;
+        background: url(../../images/sy_images/sy_zhiti.png) no-repeat center/cover;
         float: left;
         margin-right: 0.1rem;
         margin-top: 0.13rem;
