--- a/pages/me/me.css
+++ b/pages/me/me.css
@@ -36,9 +36,13 @@
     .ld_pluli_img{
     	width: 1.3rem;height: 100%;
     	float: left;
+        position: relative;
     }
     .ld_pluli_img img{
         width:100%;
+        position: absolute;
+        right: 0;top: 0;left: 0;bottom: 0;
+        margin: auto;
     }
     .ld_pluli_right{
     	float: left;
