--- a/pages/show/show.css
+++ b/pages/show/show.css
@@ -193,6 +193,10 @@
 	height:100%;
 	float:left; 
 }
+.lrc_xtbiao a{
+	display:block;
+	width:100%;height:100%;
+}
 .lrc_xtbiao img{
 	display: block;
 	margin-left: .5rem;
