--- a/pages/friend/friend.css
+++ b/pages/friend/friend.css
@@ -119,8 +119,11 @@
     	overflow: hidden;
     }
     .sy_right_img{
-    	width: 100%;height: 4.6rem;
-    	background: url(../../images/sy_images/sy_conbg.png) no-repeat center/cover;
+    	width: 100%;height: auto;
+        overflow: hidden;
+    }
+    .sy_right_img img{
+        width: 100%;
     }
     .sy_right_content{
     	width: 100%;height: auto;
