--- a/css/public.css
+++ b/css/public.css
@@ -4,6 +4,10 @@ a{
 *{
 	font-size:.24rem;
     font-family:"Microsoft Yahei";
+
+}
+a,button,input{
+    -webkit-tap-highlight-color:rgba(255,0,0,0);
 }
 * img{
 	border:none;
